--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="card__content">
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ducimus id
-        ab tenetur delectus reiciendis fugit autem qui at.
+        ab tenetur delectus reiciendis fugit autem qui at..
       </p>
       <p>
         Alias itaque praesentium eum, pariatur consequatur ducimus asperiores
